force-app/main/default/objects/Plant__c/fields/Container_Size__c.field-meta.xml
<CustomField>
    <fullName>Container_Size__c</fullName>
    <label>Container Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>10 gal</fullName>
            </value>
            <value>
                <fullName>15 gal</fullName>
            </value>
            <value>
                <fullName>17 gal</fullName>
            </value>
            <value>
                <fullName>1 gal</fullName>
            </value>
            <value>
                <fullName>20 gal</fullName>
            </value>
            <value>
                <fullName>3 gal</fullName>
            </value>
            <value>
                <fullName>5 gal</fullName>
            </value>
            <value>
                <fullName>7 gal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>