force-app/main/default/objects/Plant__c/fields/Date_Planted__c.field-meta.xml
<CustomField>
    <fullName>Date_Planted__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date Planted</label>
    <type>Date</type>
</CustomField>