force-app/main/default/objects/Plant__c/fields/Plant_Health__c.field-meta.xml
<CustomField>
    <fullName>Plant_Health__c</fullName>
    <label>Plant Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Dead</fullName>
            </value>
            <value>
                <fullName>Declining</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Stressed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>