force-app/main/default/objects/Plant__c/fields/Plant_Stage__c.field-meta.xml
<CustomField>
    <fullName>Plant_Stage__c</fullName>
    <label>Plant Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seed</fullName>
            </value>
            <value>
                <fullName>Seedling</fullName>
            </value>
            <value>
                <fullName>Growing</fullName>
            </value>
            <value>
                <fullName>Dormant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>