force-app/main/default/objects/Plant__c/fields/Plant_Type__c.field-meta.xml
<CustomField>
    <fullName>Plant_Type__c</fullName>
    <label>Plant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Biennial</fullName>
            </value>
            <value>
                <fullName>Cactus/Succulent</fullName>
            </value>
            <value>
                <fullName>Herb</fullName>
            </value>
            <value>
                <fullName>Perennial</fullName>
            </value>
            <value>
                <fullName>Shrub</fullName>
            </value>
            <value>
                <fullName>Tree</fullName>
            </value>
            <value>
                <fullName>Vine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>